--- a/src/views/partials/servicios.html
+++ b/src/views/partials/servicios.html
@@ -22,7 +22,7 @@
                     <a class="dropdown-item" href="#dropdown-item" >INSTALACIONES ELÉCTRICAS</a>
                     <a class="dropdown-item" href="#dropdown-item">MANTENIMIENTO A INSTALACIONES ELÉCTRICAS</a>
                     <a class="dropdown-item" href="#dropdown-item">TRANSFORMADORES DE BAJA TENSION</a>
-                    <a class="dropdown-item" href="#dropdown-item">TABLEROS ELÉCTRICOS DE CONTROL</a>
+                    <a class="dropdown-item" href="#dropdown-item">TABLEROS ELÉCTRICOS Y DE CONTROL</a>
                     <a class="dropdown-item" href="#dropdown-item">REUBICACIÓN MEDIDOR CFE</a>
                     <a class="dropdown-item" href="#dropdown-item">INSTALACIÓN 5TA TERMINAL</a>
                     <a class="dropdown-item" href="#dropdown-item">CAMBIO 110V A 220V</a>
