--- a/src/views/partials/slider.html
+++ b/src/views/partials/slider.html
@@ -8,31 +8,31 @@
   </ul>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <center><img class="img-fluid" src="img/minisplits.png" alt="Los Angeles" width="75%" height="500"></center>
+      <center><img class="img-fluid" src="img/minisplits.png" alt="Los Angeles" width="50%" height="100"></center>
          
     </div>
     <div class="carousel-item">
-	<center><img class="img-fluid" src="img/sistemas3.png" width="75%" height="500"></center>
+	<center><img class="img-fluid" src="img/sistemas3.png" width="50%" height="100"></center>
 	
   
     </div>
     <div class="carousel-item">
-      <center><img class="img-fluid"  src="img/sistdiv.png" alt="Chicago" width="75%" height="500"></center>
+      <center><img class="img-fluid"  src="img/sistdiv.png" alt="Chicago" width="50%" height="500"></center>
         
     </div>
 
     <div class="carousel-item">
-      <center><img class="img-fluid"  src="img/sist5.png" alt="New York" width="75%" height="500"></center>
+      <center><img class="img-fluid"  src="img/sist5.png" alt="New York" width="50%" height="500"></center>
         
       
     </div>
     <div class="carousel-item">
-        <center><img class="img-fluid"  src="img/hotelsist.png" width="60%" height="500px"></center>
+        <center><img class="img-fluid"  src="img/hotelsist.png" width="50%" height="500px"></center>
         
       </div>
 
       <div class="carousel-item">
-        <center><img class="img-fluid"  src="img/watersource.png" width="60%" height="500px"></center>
+        <center><img class="img-fluid"  src="img/watersource.png" width="50%" height="500px"></center>
         
       </div>
 
@@ -40,65 +40,69 @@
         <center><img class="img-fluid"  src="img/unidcond.png" width="60%" height="500px"></center>
         
       </div>
-      <div class="img class="img-fluid"  src="img/manejad.png" width="70%" height="500px"></center>
+      <div class="img class="img-fluid"  src="img/manejad.png" width="50%" height="500px"></center>
         
       </div>
       <div class="carousel-item">
-        <center><img img class="img-fluid" src="img/minichiler.png" width="60%" height="500px"></center>
+        <center><img img class="img-fluid" src="img/minichiler.png" width="50%" height="500px"></center>
         
       </div>
       <div class="carousel-item">
-        <center><img class="img-fluid"  src="img/fotochillers.png" width="60%" height="500px"></center>
+        <center><img class="img-fluid"  src="img/fotochillers.png" width="50%" height="500px"></center>
         
       </div>
       <div class="carousel-item">
-        <center><img class="img-fluid"  src="img/vrf.png" width="60%" height="500px"></center>
+        <center><img class="img-fluid"  src="img/vrf.png" width="50%" height="500px"></center>
         
       </div>
     
     <div class="carousel-item">
-      <center><img class="img-fluid"  src="img/airevap.png" width="60%" height="500px"></center>
+      <center><img class="img-fluid"  src="img/airevap.png" width="50%" height="500px"></center>
       
     </div>
     <div class="carousel-item">
-      <center><img class="img-fluid"  src="img/boilers.png" width="60%" height="500px"></center>
+      <center><img class="img-fluid"  src="img/boilers.png" width="50%" height="500px"></center>
       
     </div>
     <div class="carousel-item">
-      <center><img class="img-fluid"  src="img/presuri.png" width="60%" height="500px"></center>
+      <center><img class="img-fluid"  src="img/presuri.png" width="50%" height="500px"></center>
       
     </div>
     <div class="carousel-item">
-      <center><img class="img-fluid"  src="img/termoso.png" width="60%" height="500px"></center>
+      <center><img class="img-fluid"  src="img/termoso.png" width="50%" height="500px"></center>
       
     </div>
 
     <div class="carousel-item">
-      <center><img class="img-fluid"  src="img/pumpss.png" width="60%" height="500px"></center>
+      <center><img class="img-fluid"  src="img/pumpss.png" width="50%" height="500px"></center>
       
     </div>
     <div class="carousel-item">
-      <center><img class="img-fluid"  src="img/sistfot.png" width="60%" height="500px"></center>
+      <center><img class="img-fluid"  src="img/cuartoscong.png" width="50%" height="500px"></center>
       
     </div>
     <div class="carousel-item">
-      <center><img class="img-fluid"  src="img/carpots.png" width="60%" height="500px"></center>
+      <center><img class="img-fluid"  src="img/carpots.png" width="50%" height="500px"></center>
       
     </div>
     <div class="carousel-item">
-      <center><img class="img-fluid"  src="img/instele.png" width="60%" height="500px"></center>
+      <center><img class="img-fluid"  src="img/instele.png" width="50%" height="500px"></center>
       
     </div>
     <div class="carousel-item">
-      <center><img class="img-fluid"  src="img/ccms.png" width="60%" height="500px"></center>
+      <center><img class="img-fluid"  src="img/ccms.png" width="50%" height="500px"></center>
       
     </div>
     <div class="carousel-item">
-      <center><img class="img-fluid"  src="img/transform.png" width="60%" height="500px"></center>
+      <center><img class="img-fluid"  src="img/transform.png" width="50%" height="500px"></center>
       
     </div>
     <div class="carousel-item">
-      <center><img class="img-fluid"  src="img/ilum.png" width="60%" height="500px"></center>
+      <center><img class="img-fluid"  src="img/ilum.png" width="50%" height="500px"></center>
+      
+    </div>
+    <div class="carousel-item">
+      <center><img class="img-fluid"  src="img/sistfoto.png" width="50%" height="500px"></center>
       
     </div>
   </div>
