--- a/src/views/partials/slider.html
+++ b/src/views/partials/slider.html
@@ -12,7 +12,7 @@
          
     </div>
     <div class="carousel-item">
-	<center><img class="img-fluid" src="img/sistemas3.png" width="50%" height="100"></center>
+	<center><img class="img-fluid" src="img/sistemas3.png" width="50%" height="500"></center>
 	
   
     </div>
@@ -40,7 +40,8 @@
         <center><img class="img-fluid"  src="img/unidcond.png" width="60%" height="500px"></center>
         
       </div>
-      <div class="img class="img-fluid"  src="img/manejad.png" width="50%" height="500px"></center>
+      <div class="carousel-item">
+        <center><img img class="img-fluid" src="img/manejad.png" width="50%" height="500px"></center>
         
       </div>
       <div class="carousel-item">
@@ -53,6 +54,11 @@
       </div>
       <div class="carousel-item">
         <center><img class="img-fluid"  src="img/vrf.png" width="50%" height="500px"></center>
+        
+      </div>
+
+      <div class="carousel-item">
+        <center><img class="img-fluid"  src="img/cuartoscong.png" width="50%" height="500px"></center>
         
       </div>
     
@@ -77,10 +83,12 @@
       <center><img class="img-fluid"  src="img/pumpss.png" width="50%" height="500px"></center>
       
     </div>
+  
     <div class="carousel-item">
-      <center><img class="img-fluid"  src="img/cuartoscong.png" width="50%" height="500px"></center>
+      <center><img class="img-fluid"  src="img/sistfoto.png" width="50%" height="500px"></center>
       
     </div>
+    
     <div class="carousel-item">
       <center><img class="img-fluid"  src="img/carpots.png" width="50%" height="500px"></center>
       
@@ -101,10 +109,7 @@
       <center><img class="img-fluid"  src="img/ilum.png" width="50%" height="500px"></center>
       
     </div>
-    <div class="carousel-item">
-      <center><img class="img-fluid"  src="img/sistfoto.png" width="50%" height="500px"></center>
-      
-    </div>
+   
   </div>
   <a class="carousel-control-prev" href="#demo" data-slide="prev">
     <span class="carousel-control-prev-icon"></span>
