--- a/src/views/partials/navigation.html
+++ b/src/views/partials/navigation.html
@@ -18,7 +18,13 @@
       <li class="nav-item">
           <a class="nav-link" href="#vision"><h3>Vision</h3></a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#valores"><h3>Valores</h3></a>
+          </li>
 
+          <li class="nav-item">
+              <a class="nav-link" href="#quien"><h3>Empresa</h3></a>
+            </li>
 
       <li class="nav-item">
         <a class="nav-link" href="#about"><h3>Contact</h3></a>
