--- a/src/views/index.html
+++ b/src/views/index.html
@@ -154,11 +154,49 @@ AOS.init();
             <div class="container-fluid">
         <div class="row">
         <div class="col-lg-12 col-sm 12 "data-aos="fade-top">
-            <h5>Posicionarnos como una empresa numero uno a nivel regional en proveer soliciones solares,
-                 electricas y climaticas, brindando a nuestros clientes confianza, seguridad y confort.</h5>
+            <center><h5>Posicionarnos como una empresa numero uno a nivel regional en proveer soliciones solares,
+                electricas y climaticas, brindando a nuestros clientes confianza, seguridad y confort.</h5></center>
             </div>
         <div class="col-lg-12 col-sm-12" data-aos="fade-right">
             <img class="img-fluid mx-auto d-block" style="width:15em; height:10em;" src="/img/vision.png">
+        </div>
+            </div>
+        </div>
+    </div>
+
+    <!--Valores-->
+
+    <div class="jumbotron"id="valores">
+        <i class="text-center"><h1 data-aos="fade-left">VALORES</h1></i>
+        <hr  style="height:3px; margin:auto; width:100px; background:blue; margin-bottom:2em;">
+            <div class="container-fluid">
+        <div class="row">
+        <div class="col-lg-12 col-sm 12 "data-aos="fade-top">
+            <center><h5>*Flexibilización y adaptación al cambio.<br>
+                *Innovación permanente en productos y servicios.<br>
+                *Compromiso y responsabilidad con la calidad brindada a nuestros clientes y el cumplimiento de tiempos de entrega.<br>
+                *Sostenibilidad ambiental.<br>
+                *Responsabilidad Social Empresarial</h5></center>
+            </div>
+        <div class="col-lg-12 col-sm-12" data-aos="fade-right">
+            <img class="img-fluid mx-auto d-block" style="width:15em; height:10em;" src="/img/valores.png">
+        </div>
+            </div>
+        </div>
+    </div>
+
+    <!--Quien soy-->
+    <div class="jumbotron"id="quien">
+        <i class="text-center"><h1 data-aos="fade-left">QUIENES SOMOS?</h1></i>
+        <hr  style="height:3px; margin:auto; width:100px; background:blue; margin-bottom:2em;">
+            <div class="container-fluid">
+        <div class="row">
+        <div class="col-lg-12 col-sm 12 "data-aos="fade-top">
+            <center><h5>Somos una empresa comprometida en ofrecer servicios y productos de calidad <br>
+                colaborando en el cuidado del medio ambiente para los sector residencial comercial e industrial.</h5></center>
+            </div>
+        <div class="col-lg-12 col-sm-12" data-aos="fade-right">
+            <img class="img-fluid mx-auto d-block" style="width:15em; height:10em;" src="/img/REIgrandelogogrande.jpg">
         </div>
             </div>
         </div>
